--- a/manage_defines/20002_libraries.toml
+++ b/manage_defines/20002_libraries.toml
@@ -7,7 +7,9 @@ name_map = { zh = "库", en = "libraries" }
 
 # 数据描写 或者 模式
 schema = [
-    { data_type = "String", name_map = { zh = "根路径", en = "root"}, removed = false },
+    { data_type = "String", name_map = { zh = "根路径", en = "inner_root_path"}, removed = false },
+    { data_type = "String", name_map = { zh = "根路径", en = "external_root_path"}, removed = false },
+    { data_type = "List", name_map = { zh = "库目图片", en = "picture"}, removed = false },
 ]
 
 # 特有属性
