--- a/manage_defines/20006_cuts.toml
+++ b/manage_defines/20006_cuts.toml
@@ -9,6 +9,9 @@ name_map = { zh = "镜", en = "cuts" }
 schema = [
     { data_type = "String", name_map = { zh = "场编号", en = "sequence_id"}, removed = false },
     { data_type = "String", name_map = { zh = "根目录", en = "root"}, removed = false },
+
+    # done, suspending, cancal
+    { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
 ]
 
 # 特有属性
