--- a/manage_defines/20008_assemblies.toml
+++ b/manage_defines/20008_assemblies.toml
@@ -9,6 +9,10 @@ name_map = { zh = "预组件", en = "prefabs" }
 schema = [
     { data_type = "String", name_map = { zh = "库编号", en = "library_id"}, removed = false },
     { data_type = "String", name_map = { zh = "目录", en = "root"}, removed = false },
+
+    # done, suspending, cancal
+    { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
+    { data_type = "List", name_map = { zh = "预览", en = "previews"}, removed = false },
 ]
 
 # 特有属性
