添加新建服务架构文件

--- a/manage_defines/20008_assemblies.toml
+++ b/manage_defines/20008_assemblies.toml
@@ -3,7 +3,7 @@
 #
 
 id = 20008
-name_map = { zh = "预组件", en = "prefabs" }
+name_map = { zh = "预组件", en = "assemblies" }
 
 # 数据描写 或者 模式
 schema = [
