--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ runtime_handle = { path = "../cashmere_core/runtime_handle" }
 service_common_handles = { path = "../cashmere_core/service_common_handles" }
 view = { path = "../cashmere_core/view" }
 manage_define = { path = "../cashmere_core/manage_define" }
+server_utils = { path = "../cashmere_core/server_utils" }
 
 parking_lot = "0.12.1"
 chrono = { version = "0.4.19", features = ["serde"] }
@@ -35,7 +36,7 @@ serde_derive = "1.0.131"
 log = "0.4.17"
 simplelog = "0.12.0"
 
-clap = "3.1.18"
+clap = "3.1.19"
 
 [build-dependencies]
 tonic-build = "0.7.2"
