--- a/manage_defines/20009_specses.toml
+++ b/manage_defines/20009_specses.toml
@@ -8,9 +8,9 @@ name_map = { zh = "规格", en = "specses" }
 # 数据描写 或者 模式
 schema = [
     { data_type = "String", name_map = { zh = "资产编号", en = "asset_id"}, removed = false },
-    { data_type = "Map", name_map = { zh = "目录", en = "modify_map"}, removed = false },
 
-    # done, suspending, cancal
+    # done, suspending, cancel
+    { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
     { data_type = "List", name_map = { zh = "预览", en = "previews"}, removed = false },
 ]
 
