--- a/manage_defines/20010_prefabs.toml
+++ b/manage_defines/20010_prefabs.toml
@@ -2,15 +2,15 @@
 # 集
 #
 
-id = 20008
-name_map = { zh = "预组件", en = "assemblies" }
+id = 20010
+name_map = { zh = "预组件", en = "prefabs" }
 
 # 数据描写 或者 模式
 schema = [
-    { data_type = "String", name_map = { zh = "库编号", en = "library_id"}, removed = false },
-    { data_type = "String", name_map = { zh = "目录", en = "root"}, removed = false },
+    { data_type = "String", name_map = { zh = "库编号", en = "asset_id"}, removed = false },
+    { data_type = "String", name_map = { zh = "修改表", en = "modified_map"}, removed = false },
 
-    # done, suspending, cancal
+    # done, suspending, cancel
     { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
     { data_type = "List", name_map = { zh = "预览", en = "previews"}, removed = false },
 ]
