--- a/manage_defines/20010_prefabs.toml
+++ b/manage_defines/20010_prefabs.toml
@@ -7,8 +7,8 @@ name_map = { zh = "预组件", en = "prefabs" }
 
 # 数据描写 或者 模式
 schema = [
-    { data_type = "String", name_map = { zh = "库编号", en = "asset_id"}, removed = false },
-    { data_type = "String", name_map = { zh = "修改表", en = "modified_map"}, removed = false },
+    { data_type = "Int32", name_map = { zh = "主管理", en = "owner_manage_id"}, removed = false },
+    { data_type = "String", name_map = { zh = "主实体", en = "owner_entity_id"}, removed = false },
 
     # done, suspending, cancel
     { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
