--- a/manage_defines/20011_set_collections.toml
+++ b/manage_defines/20011_set_collections.toml
@@ -1,18 +1,15 @@
 #
-# 集
+# 景集合
 #
 
-id = 20008
-name_map = { zh = "预组件", en = "assemblies" }
+id = 20011
+name_map = { zh = "景", en = "set_collections" }
 
 # 数据描写 或者 模式
 schema = [
-    { data_type = "String", name_map = { zh = "库编号", en = "asset_collection_id"}, removed = false },
-    { data_type = "List", name_map = { zh = "引用表", en = "references"}, removed = false },
-
-    # done, suspending, cancal
-    { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
-    { data_type = "List", name_map = { zh = "预览", en = "previews"}, removed = false },
+    { data_type = "String", name_map = { zh = "根路径", en = "inner_root_path"}, removed = false },
+    { data_type = "String", name_map = { zh = "根路径", en = "external_root_path"}, removed = false },
+    { data_type = "List", name_map = { zh = "库目图片", en = "picture"}, removed = false },
 ]
 
 # 特有属性
@@ -30,7 +27,6 @@ massage_queue = []
 
 
 [view_rules]
-
 [view_rules.manage]
 10000 = { read_rule = "Read", write_rule = "Write", read_filters = [
     "NoLimit",
