--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ serde_derive = "1.0.131"
 # logging
 log = "0.4.17"
 simplelog = "0.12.0"
+rust-i18n = "1.0"
+once_cell = "1.8.0"
 
 clap = "3.1.19"
 
