--- a/manage_defines/20009_specses.toml
+++ b/manage_defines/20009_specses.toml
@@ -11,8 +11,7 @@ schema = [
     { data_type = "String", name_map = { zh = "主实体", en = "owner_entity_id"}, removed = false },
 
     # done, suspending, cancel
-    { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
-    { data_type = "List", name_map = { zh = "预览", en = "previews"}, removed = false },
+    # { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
 ]
 
 # 特有属性
