整理asset_collection,asset服务

--- a/manage_defines/20003_assets.toml
+++ b/manage_defines/20003_assets.toml
@@ -7,17 +7,18 @@ name_map = { zh = "资产", en = "assets" }
 
 # 数据描写 或者 模式
 schema = [
-    { data_type = "String", name_map = { zh = "原始合集", en = "original_collection"}, removed = false },
-    { data_type = "List", name_map = { zh = "关联合集", en = "associated_collections"}, removed = false },
+    { data_type = "String", name_map = { zh = "原始集", en = "original_collection"}, removed = false },
+    { data_type = "List", name_map = { zh = "关联集", en = "associated_collections"}, removed = false },
 
     { data_type = "String", name_map = { zh = "存储路径", en = "relative_path"}, removed = false },
     { data_type = "Map", name_map = { zh = "规格", en = "specses"}, removed = false },
     { data_type = "Map", name_map = { zh = "预制件", en = "prefabs"}, removed = false },
 
-    # done, suspending, cancal
+    # done, suspending, cancel
     { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
 
-    # { data_type = "List", name_map = { zh = "预览", en = "previews"}, removed = false },
+    # 二进制序列列表, 大小不超过1m
+    { data_type = "List", name_map = { zh = "预览", en = "previews"}, removed = false },
 ]
 
 # 特有属性
