--- a/manage_defines/20008_assemblies.toml
+++ b/manage_defines/20008_assemblies.toml
@@ -7,7 +7,8 @@ name_map = { zh = "预组件", en = "assemblies" }
 
 # 数据描写 或者 模式
 schema = [
-    { data_type = "String", name_map = { zh = "库编号", en = "asset_collection_id"}, removed = false },
+    { data_type = "String", name_map = { zh = "原始集", en = "original_collection"}, removed = false },
+    { data_type = "List", name_map = { zh = "关联集", en = "associated_collections"}, removed = false },
     { data_type = "List", name_map = { zh = "引用表", en = "references"}, removed = false },
 
     # done, suspending, cancal
