--- a/manage_defines/20003_assets.toml
+++ b/manage_defines/20003_assets.toml
@@ -7,17 +7,24 @@ name_map = { zh = "资产", en = "assets" }
 
 # 数据描写 或者 模式
 schema = [
+    # 2001
     { data_type = "String", name_map = { zh = "原始集", en = "original_collection"}, removed = false },
+    # 2002
     { data_type = "List", name_map = { zh = "关联集", en = "associated_collections"}, removed = false },
 
+    # 2003
     { data_type = "String", name_map = { zh = "存储路径", en = "relative_path"}, removed = false },
+    # 2004
     { data_type = "Map", name_map = { zh = "规格", en = "specses"}, removed = false },
+    # 2005
     { data_type = "Map", name_map = { zh = "预制件", en = "prefabs"}, removed = false },
 
     # done, suspending, cancel
+    # 2006
     { data_type = "String", name_map = { zh = "状态", en = "status"}, removed = false },
 
     # 二进制序列列表, 大小不超过1m
+    # 2007
     { data_type = "List", name_map = { zh = "预览", en = "previews"}, removed = false },
 ]
 
@@ -41,6 +48,7 @@ massage_queue = []
 10000 = { read_rule = "Read", write_rule = "Write", read_filters = [
     "NoLimit",
 ], write_filters = [
+    "NoLimit",
 ] }
 10001 = { read_rule = "Read", write_rule = "InVisible", read_filters = [
     "NoLimit",
@@ -50,6 +58,7 @@ massage_queue = []
 10000 = { read_rule = "Read", write_rule = "Write", read_filters = [
     "NoLimit",
 ], write_filters = [
+    "NoLimit",
 ] }
 10001 = { read_rule = "Read", write_rule = "OwnerWrite", read_filters = [
     "OnlyOwner",
@@ -172,6 +181,38 @@ massage_queue = []
 ], write_filters = [
 ] }
 [view_rules.schema.2003]
+10000 = { read_rule = "Read", write_rule = "Write", read_filters = [
+    "NoLimit",
+], write_filters = [
+] }
+10001 = { read_rule = "InVisible", write_rule = "InVisible", read_filters = [
+], write_filters = [
+] }
+[view_rules.schema.2004]
+10000 = { read_rule = "Read", write_rule = "Write", read_filters = [
+    "NoLimit",
+], write_filters = [
+] }
+10001 = { read_rule = "InVisible", write_rule = "InVisible", read_filters = [
+], write_filters = [
+] }
+[view_rules.schema.2005]
+10000 = { read_rule = "Read", write_rule = "Write", read_filters = [
+    "NoLimit",
+], write_filters = [
+] }
+10001 = { read_rule = "InVisible", write_rule = "InVisible", read_filters = [
+], write_filters = [
+] }
+[view_rules.schema.2006]
+10000 = { read_rule = "Read", write_rule = "Write", read_filters = [
+    "NoLimit",
+], write_filters = [
+] }
+10001 = { read_rule = "InVisible", write_rule = "InVisible", read_filters = [
+], write_filters = [
+] }
+[view_rules.schema.2007]
 10000 = { read_rule = "Read", write_rule = "Write", read_filters = [
     "NoLimit",
 ], write_filters = [
