--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,6 @@ edition = "2021"
 [dependencies]
 cash_core = { path = "../cashmere_core/cash_core" }
 cash_result = { path = "../cashmere_core/cash_result" }
-account = { path = "../cashmere_core/account" }
-account_server = { path = "../cashmere_core/account_server" }
 auth = { path = "../cashmere_core/auth" }
 configs = { path = "../cashmere_core/configs" }
 majordomo = { path = "../cashmere_core/majordomo" }
@@ -21,28 +19,35 @@ service_common_handles = { path = "../cashmere_core/service_common_handles" }
 view = { path = "../cashmere_core/view" }
 manage_define = { path = "../cashmere_core/manage_define" }
 server_utils = { path = "../cashmere_core/server_utils" }
+service_utils = { path = "../cashmere_core/service_utils" }
 
+account_module = { path = "../account_module" }
 knitter_module = { path = "../knitter_module" }
-event_module = {path = "../event_module"}
+event_module = { path = "../event_module" }
 
-parking_lot = "0.12.1"
-chrono = { version = "0.4.19", features = ["serde"] }
-tokio = { version = "1.21.2", features = ["full"] }
-tonic = { version = "0.7.2", features = ["tls"] }
-prost = "0.10.4"
-bson = "2.6.1"
-async-trait = "0.1.51"
+dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
+  "tokio",
+  "tonic",
+  "tower",
+  "prost",
+  "bson",
+  "serde",
+  "serde_derive",
+  "log",
+  "simplelog",
+] }
+
+tonic = { version = "0.9.2", features = ["tls", "gzip"] }
+prost = "0.11"
 serde = "1.0.131"
 serde_derive = "1.0.131"
-
-# logging
-log = "0.4.17"
-simplelog = "0.12.0"
 rust-i18n = "1.0"
 once_cell = "1.8.0"
 
 clap = "3.1.19"
 
 [build-dependencies]
-tonic-build = "0.7.2"
+dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
+  "tonic-build",
+] } 
 manage_define = { path = "../cashmere_core/manage_define" }
