--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,16 +36,14 @@ dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
   "serde_derive",
   "log",
   "simplelog",
+  "rust-i18n",
+  "once_cell",
 ] }
 
 tonic = { version = "0.9.2", features = ["tls", "gzip"] }
 prost = "0.11"
 serde = "1.0.131"
 serde_derive = "1.0.131"
-rust-i18n = "1.0"
-once_cell = "1.8.0"
-
-clap = "3.1.19"
 
 [build-dependencies]
 dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
